NEWS file for Transmission <http://www.transmissionbt.com/>

1.30 (2008/mm/dd)
http://trac.transmissionbt.com/query?group=component&milestone=1.30
- Mac
   + Status strings are toggled from the action button (they are no longer clickable)

1.20 (2008/05/09)
http://trac.transmissionbt.com/query?group=component&milestone=1.20
- All Platforms
   + Support https tracker connections
   + IP blocking using the Bluetack Level1 blocklist
   + Better support of multitracker torrents
   + Faster UPnP port mapping on startup
   + Ability to reset global statistics
   + Various bugfixes
- Mac
   + Display of decimal numbers matches system international settings
   + Updated Dock badge images
- GTK+
   + Inhibit hibernation when downloading
   + Use XDG basedir spec for configuration files
   + Various bug fixes and usability improvements
   + Vastly improved translations thanks to the Ubuntu translation team

1.11 (2008/04/04)
- Mac
   + Fix scrape address visual glitch with the tracker inspector tab
   + Only make the progress status string clickable on multi-file torrents
   + Traditional Chinese localization, updated Russian localization
- GTK+
   + Fix a couple of minor display issues

1.10 (2008/03/28)
- All Platforms
   + Stop torrents when downloading and the disk becomes full
   + Removing a torrent also removes it from the cache
   + Smaller memory footprint per-torrent and per-peer
   + Various backend bugfixes & improvements
- Mac
   + Window when adding torrents to select files and other settings
   + Leopard: Collapsable group dividers
   + Use the file icon as the per-torrent action button
   + Tracker tab in the inspector
   + Message log specifies the torrent/activity the message relates to
   + Updated images in the inspector
   + Optional display of remaining time while seeding in Minimal View
   + Improved accuracy for displaying the remaining disk space warning
- GTK+
   + Window for selecting files & priorities when opening torrents